expanded lineups and actual scores implemented

--- a/src/app/components/game/game.component.css
+++ b/src/app/components/game/game.component.css
@@ -2,7 +2,8 @@
 	width:80px;
 	border: 1px solid grey;
 	border-width:thin;
-    display: table-cell;
+  display: table-cell;
+  background-color: inherit;
 }
 
 .game_team_all{
