--- a/src/app/components/lineup/lineup-builder/lineup-builder.component.css
+++ b/src/app/components/lineup/lineup-builder/lineup-builder.component.css
@@ -2,99 +2,40 @@
 .col-md-4{
   max-width:100%
 }
-.lineup__body {
-	display: table;
-    height: 450px;
+.lineup-builder-container{
+  background-color: White;
+  height: 35em
+}
+
+
+table {
+    display: table;
     width: 100%;
-    margin: 0;
-    padding: 0;
-    list-style:none
-	}
-
-	.lineup__slot{
-	display:flex;
-	display:list-item;
-	border-width:.5px;
-	margin: 0;
-	padding: 0 5px;
-	}
-
-	.lineup__slot:not(.lineup__slot--has-player)>:not(.lineup__empty-state) {
-	display:none;
-	}
-	.lineup__slot:not(.lineup__slot--has-player) .lineup__empty-state{
-	display: flex
-	}
+    height: 28em
+}
 
 
-	.lineup__empty-state{
-	 border:solid;
-	 border-color:grey;
-	 border-width:thin;
-	 display:none;
-	 font-size: 16px;
-	 cursor:pointer;
-	 align-items:center;
-	 position: relative;
+td{
+  padding:0; margin:0;
+  display: table-cell;
+  vertical-align: middle
+}
 
-	}
-
-	.lineup__player-container{
-	 border:solid;
-	 border-color:grey;
-	 border-width:thin;
-	 display:flex;
-	 font-size: 16px;
-	 cursor:pointer;
-	 align-items:center;
-	 position: relative
-	}
-	.lineup__player{
-	 display:flex;
-	 height:100%;
-	 position:relative;
-	}
-
-	.lineup_player_info{
-	 display:table;
-	 width:100%;
-	 height:100%;
-	 table-layout:fixed;
-	}
-
-	.lineup__empty-state span{
-	display: table-cell;
-    text-align: left;
-	}
-
-	.lineup__player-position {
-		width:10%;
-	}
-
-	.lineup_player_points{
-		width:10%;
-	}
-
-	.lineup_player_salary{
-		width:15%;
-	}
-
-	.lineup__player-empty-text {
-		margin-left:10;
-	}
-
-	.lineup_player_name {
-		margin-left:10;
-	}
-
-	.player-action {
-		width:10%;
-	}
-	.lineup_player_info span{
-	display: table-cell;
-    text-align: left;
-	}
-
+td:nth-child(1),th:nth-child(1){
+  width:10%
+}
+td:nth-child(2),th:nth-child(2){
+  width:50%
+}
+td:nth-child(3),th:nth-child(3){
+  width:20%
+}
+td:nth-child(4),th:nth-child(4){
+  width:10%
+}
+td:nth-child(5),th:nth-child(5){
+  width:10%
+}
 .col-xs-4{
   float:left;
   width: 33.3333%
