--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
+<div class="body-test">
+
 <app-navbar></app-navbar>
-<div class="container-fluid">
+<div class="container">
   <router-outlet></router-outlet>
+</div>
 </div>
