--- a/src/app/components/players/players.component.html
+++ b/src/app/components/players/players.component.html
@@ -14,15 +14,26 @@
 				</div>
 
 	</div>
-
+	<div class="table-container">
 	<table class="table table-color table-bordered table-hover">
+		<thead class="thead-info">
+			<tr>
+				<th>Player</th>
+				<th>Team</th>
+				<th>Salary</th>
+				<th>Projected</th>
+				<th>Points/$</th>
+				<th>Add</th>
+			</tr>
+		</thead>
+		<tbody infiniteScroll [infiniteScrollDistance]=".1" [infiniteScrollThrottle]="50" (scrolled)="onScroll()" [scrollWindow]="false">
 			<tr *ngFor="let player of filteredPlayers">
 				<td class="col-md-4">{{player.player.pos}} {{player.player.firstName}} {{player.player.lastName}}</td>
 				<td class="col-md-1">{{player.team.abbr}}</td>
 				<td class="col-md-1" ng-class="{neg_salary:p.lineup.remSalary<0}">{{player.salary}}</td>
 				<td class="col-md-1">{{player.projectedScore}}</td>
 				<td class="col-md-1">{{player.pointsPerDollar | number:'1.0-1'}}</td>
-				<td class = "player-add col-md-1">
+				<td class = "player-add">
 					<button class = "player-add-button"
 							*ngIf="!inLineup(player.id)"
 							(click) = "addPlayer(player)">
@@ -34,4 +45,7 @@
 					</button>
 				</td>
 			</tr>
+    </tbody>
+
 	</table>
+	</div>
