--- a/src/app/components/lineup/lineups/lineups.component.css
+++ b/src/app/components/lineup/lineups/lineups.component.css
@@ -1,28 +1,25 @@
 .lineup__player_name{
   font-size: smaller;
-  word-wrap: bre
 }
 
 .lineup__actions{
   vertical-align: middle;
 }
-.lTable{
-	display: table;
-	width: 100%;
-}
-.lTableRow {
-	display: table-row;
-}
-.lTableHeading {
-	background-color: #EEE;
-	display: table-header-group;
-}
-.lTableCell, .lTableHead {
-	border: 1px solid #999999;
-	display: table-cell;
-	padding: 3px 10px;
+.lineup__info{
+  float:left;
+  width: 25%
 }
 
-.lTableBody {
-	display: table-row-group;
+
+.card-text{
+    font-size: small;
+}
+
+.lineup-edit-button{
+  border: none;
+	background-color:transparent;
+	font-family:"fontAwesome";
+	font-size: 1.5rem;
+	display: block;
+	margin:auto;
 }
