--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,10 +7,10 @@
           <a routerLink="/" class="nav-link">Home</a>
         </li>
         <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
-          <a routerLink="/lineups" class="nav-link">Lineups</a>
+          <a routerLink="/lineups/user" class="nav-link">Lineups</a>
         </li>
         <li class="nav-item" [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
-          <a routerLink="/research" class="nav-link">Research</a>
+          <a routerLink="/lineups/optimized" class="nav-link">Research</a>
         </li>
         <li   class="nav-item " [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
           <i [popover]="myPopover" [popoverCloseOnClickOutside]="false" [popoverCloseOnMouseOutside]="false" class="fa fa-user-circle fa-lg">
