--- a/src/app/components/players/players.component.html
+++ b/src/app/components/players/players.component.html
@@ -1,5 +1,7 @@
 
-	<app-game></app-game>
+	<app-game
+		(gameFilterSelect) = "onGameFilter($event)"
+	></app-game>
 	<div class="player_filters">
 				<div class="btn-group btn-group-m">
 				  <button *ngFor="let pos of positions"
