--- a/src/app/components/lineup/lineups/lineups.component.html
+++ b/src/app/components/lineup/lineups/lineups.component.html
@@ -1,7 +1,6 @@
 
 	<div class = "row" >
 		<div class="col-md-6">
-
 			<div class="card-group" [attr.id]="'accordion_' + i" *ngFor="let lineup of lineups; let i = index;">
             <div class="card mb-0" data-toggle="collapse" [attr.data-parent]="'#accordion_' + i" [attr.href]="'#collapseOne_' + i">
                     <h2 class="card-title mb-0">
@@ -26,14 +25,14 @@
 											<div class="card lineup__info">
 										    <div class="card-body">
 										      <h6 class="card-title">Actions</h6>
-													<button  routerLink="/" class = "lineup-edit-button"
+														<button  routerLink="/" class = "lineup-edit-button"
 															(click)= "passLineupToBuilder(lineup)">
-														<i class="fa fa-edit"></i>
-													</button>
-													<button class = "player-remove-button"
+															<i class="fa fa-edit"></i>
+														</button>
+														<button class = "player-remove-button"
 															(click)= "deleteLineup(lineup)">
-														<i class="fa fa-minus-circle"></i>
-													</button>
+															<i class="fa fa-minus-circle"></i>
+														</button>
 										    </div>
 										  </div>
 
@@ -57,5 +56,8 @@
                 </div>
             </div>
         </div>
+	</div>
+	<div class="col-md-6">
+		<app-lineup-result-chart></app-lineup-result-chart>
 	</div>
 </div>
