--- a/src/app/components/players/player-details/player-details.component.css
+++ b/src/app/components/players/player-details/player-details.component.css
@@ -11,6 +11,13 @@
 .recentPerformaceDate{
   font-size: small
 }
+.scoreDiff{
+  font-size: small;
+  color: red
+}
+.posDiff{
+  color:green
+}
 
 ul{
   list-style :none;
@@ -18,12 +25,16 @@ ul{
 
 
 
-.player-recent-performance__right{
+.player-recent-performance__proj{
   display:inline-block;
-  float:right
+  padding-left: 1em
   }
-  .player-recent-performance__left{
-  display:inline-block
+.player-recent-performance__act{
+display:inline-block;
+}
+.player-recent-performance__match{
+display:inline-block;
+float:right
 }
 
 .ct-series-a .ct-bar, .ct-series-a .ct-line, .ct-series-a .ct-point, .ct-series-a .ct-slice-donut {
